--- a/src/app/pages/src-catalogue/order-catalogue/index/order-catalogue.component.html
+++ b/src/app/pages/src-catalogue/order-catalogue/index/order-catalogue.component.html
@@ -64,7 +64,7 @@
         [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true"
         (page)="setPage($event)" (sort)="onSort($event)">
 
-        <ngx-datatable-column name="Kode Pesanan" prop="invoice_number">
+        <ngx-datatable-column [width]="200" name="Kode Pesanan" prop="invoice_number">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <span class="row-name"
               [routerLink]="['/src-catalogue', 'orders', 'detail',row.id]">{{row.invoice_number}}</span>
