fixing import faster audience (cde 1889)

--- a/src/app/pages/dte/audience/import/import-audience-dialog.component.html
+++ b/src/app/pages/dte/audience/import/import-audience-dialog.component.html
@@ -40,7 +40,7 @@
         [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true" (page)="setPage($event)">
 
         <ngx-datatable-column name="Penjual" prop="name">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value" let-rowIndex="rowIndex">
             {{ row.name }}
           </ng-template>
         </ngx-datatable-column>
