feat: DTE Video File

--- a/src/app/pages/dte/template/create/template-create.component.scss
+++ b/src/app/pages/dte/template/create/template-create.component.scss
@@ -108,7 +108,9 @@
 
     .question-list {
       .add-image {
-        visibility: hidden;
+        // visibility: hidden;
+        top: -30px;
+        position: relative;
       }
     }
 
@@ -140,7 +142,13 @@
     }
 
     .template-task-image {
-      width: 40%;
+      width: 50%;
+      border: 1px solid #ececec;
+      border-radius: 3px;
+    }
+
+    .template-task-video {
+      width: 50%;
       border: 1px solid #ececec;
       border-radius: 3px;
     }
