feat: DTE Video File #1

--- a/src/app/pages/dte/template/create/template-create.component.html
+++ b/src/app/pages/dte/template/create/template-create.component.html
@@ -403,7 +403,7 @@
         </button>
 
         <button mat-icon-button matTooltip="Tambahkan Video" matTooltipPosition="after" class=" secondary-text" 
-          (click)="uploadVideo('master', i)">
+          (click)="uploadVideo('master', null)">
           <mat-icon class="secondary-text">videocam</mat-icon>
         </button>
       </div>
