--- a/src/app/pages/user-management/private-label/orderto-supplier/index/orderto-supplier-index.component.html
+++ b/src/app/pages/user-management/private-label/orderto-supplier/index/orderto-supplier-index.component.html
@@ -1,5 +1,5 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
-  <page-content-header [contentTitle]="'Order to Supplier'">
+  <page-content-header [contentTitle]="'Order dari Mitra'">
   </page-content-header>
 
   <div class="content p-24" *ngIf="!onLoad">
