--- a/src/app/pages/sku-management/product/create/product-create.component.html
+++ b/src/app/pages/sku-management/product/create/product-create.component.html
@@ -184,7 +184,7 @@
                 </div>
                 <div fxLayout="row" fxLayoutGap="20px">
                   <mat-checkbox (change)="isPromo($event)" class="mt-4 ml-4 mb-8" formControlName="is_promo_src">Promo SRC</mat-checkbox>
-                  <mat-checkbox (change)="isPrivateLabel($event)" class="mt-4 ml-4 mb-8" formControlName="is_private_label">Private Label</mat-checkbox>
+                  <mat-checkbox (change)="isPrivateLabel($event)" class="mt-4 ml-4 mb-8" formControlName="is_private_label">Produk Prinsipal</mat-checkbox>
                 </div>
                 <!-- <mat-radio-group formControlName="jenisproduk" class="radio-group pb-16" fxLayout="row" fxLayoutGap="20px">
                   <mat-radio-button class="radio-button" *ngFor="let item of jenisProduk" [value]="item.value" (change)="jenisProdukChange($event)">
