--- a/src/app/pages/user-management/private-label/supplier-company/edit/supplier-company-edit.component.html
+++ b/src/app/pages/user-management/private-label/supplier-company/edit/supplier-company-edit.component.html
@@ -1,5 +1,5 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
-  <page-content-header [contentTitle]="'Supplier Company'">
+  <page-content-header [contentTitle]="'Perusahaan'">
   </page-content-header>
 
   <div class="content p-24">
