--- a/src/app/pages/user-management/private-label/supplier-company/index/supplier-company-index.component.html
+++ b/src/app/pages/user-management/private-label/supplier-company/index/supplier-company-index.component.html
@@ -1,5 +1,5 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
-  <page-content-header [contentTitle]="'Supplier Company'">
+  <page-content-header [contentTitle]="'Perusahaan'">
     <button style="width: 170px" [routerLink]="['/user-management', 'supplier-company','create']" mat-raised-button type="button">
       <mat-icon>add</mat-icon> TAMBAH
     </button>
@@ -8,7 +8,7 @@
   <div class="content p-24" *ngIf="!onLoad">
     <div class="table-wrapper">
       <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
-        <h2 class="pl-8">Daftar Supplier Company</h2>
+        <h2 class="pl-8">Daftar Perusahaan</h2>
         <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
           <mat-icon>search</mat-icon>
           <mat-form-field class="is-light tab-search">
