--- a/src/app/pages/user-management/private-label/user-supplier/edit/user-supplier-edit.component.html
+++ b/src/app/pages/user-management/private-label/user-supplier/edit/user-supplier-edit.component.html
@@ -5,7 +5,7 @@
   <!-- / HEADER -->
   <div class="content p-24">
     <div fxLayout="row" class="p-24 bb" fxLayoutAlign="space-between center">
-      <h2 class="m-0">{{ isDetail? 'Detail' : 'Edit' }} User Supplier</h2>
+      <h2 class="m-0">{{ isDetail? 'Detail' : 'Edit' }} User Perusahaan</h2>
       <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="10px">
         <mat-label>Status:</mat-label>
         <mat-form-field class="orders dropdown" [class]="userSupplierStatusSelected == 'active'? 'orders status-active' : userSupplierStatusSelected == 'inactive'? 'orders status-nonactive': 'orders status-active'" fxLayout="row" fxLayoutAlign="center center">
@@ -70,16 +70,16 @@
             <ng-template matStepLabel>Nama Supplier</ng-template>
             <div fxFlex="1 0 auto" fxLayout="column">
               <mat-form-field>
-                <mat-label>Supplier Company</mat-label>
-                <mat-select placeholder="Supplier Company" formControlName="supplierCompany" *ngIf="!isDetail">
+                <mat-label>Perusahaan</mat-label>
+                <mat-select placeholder="Perusahaan" formControlName="supplierCompany" *ngIf="!isDetail">
                   <mat-option [value]="item.id" *ngFor="let item of supplierCompanyList">{{item.name}}</mat-option>
                 </mat-select>
-                <mat-select placeholder="Supplier Company" formControlName="supplierCompany" [disabled]="true" *ngIf="isDetail">
+                <mat-select placeholder="Perusahaan" formControlName="supplierCompany" [disabled]="true" *ngIf="isDetail">
                   <mat-option [value]="item.id" *ngFor="let item of supplierCompanyList">{{item.name}}</mat-option>
                 </mat-select>
                 <mat-error
                   *ngIf="verticalStepperStep2.controls['supplierCompany'].hasError('required') && verticalStepperStep2.controls['supplierCompany'].touched">
-                  Supplier Company harus diisi
+                  Perusahaan harus diisi
                 </mat-error>
               </mat-form-field>
             </div>
@@ -100,10 +100,10 @@
 
             <div fxFlex="1 0 auto" fxLayout="column">
               <mat-form-field fxFlex="100" class="is-light">
-                <mat-select placeholder="User Supplier" formControlName="role" *ngIf="!isDetail">
+                <mat-select placeholder="User Perusahaan" formControlName="role" *ngIf="!isDetail">
                   <mat-option *ngFor="let item of listRole" [value]="item.id">{{item.name}}</mat-option>
                 </mat-select>
-                <mat-select placeholder="User Supplier" formControlName="role" [disabled]="true" *ngIf="isDetail">
+                <mat-select placeholder="User Perusahaan" formControlName="role" [disabled]="true" *ngIf="isDetail">
                   <mat-option *ngFor="let item of listRole" [value]="item.id">{{item.name}}</mat-option>
                 </mat-select>
                 <mat-error
