--- a/src/app/pages/user-management/private-label/user-supplier/index/user-supplier-index.component.html
+++ b/src/app/pages/user-management/private-label/user-supplier/index/user-supplier-index.component.html
@@ -1,5 +1,5 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
-  <page-content-header [contentTitle]="'User Supplier'">
+  <page-content-header [contentTitle]="'User Perusahaan'">
     <button style="width: 170px" [routerLink]="['/user-management', 'supplier-user','create']" mat-raised-button
       type="button">
       <mat-icon>add</mat-icon> TAMBAH
@@ -9,7 +9,7 @@
   <div class="content p-24" *ngIf="!onLoad">
     <div class="table-wrapper">
       <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
-        <h2 class="pl-8">Daftar User Supplier</h2>
+        <h2 class="pl-8">Daftar User Perusahaan</h2>
         <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
           <mat-icon>search</mat-icon>
           <mat-form-field class="is-light tab-search">
