--- a/src/app/pages/pay-later/pay-later-panel/edit/pay-later-panel-edit.component.html
+++ b/src/app/pages/pay-later/pay-later-panel/edit/pay-later-panel-edit.component.html
@@ -1,3 +1,18 @@
-<p>
-  pay-later-panel-edit works!
-</p>
+<div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
+  <!-- HEADER -->
+  <page-content-header [contentTitle]="'Panel Bayar Nanti'">
+  </page-content-header>
+  <!-- / HEADER -->
+  <div class="content p-24">
+    <div class="ayo-main-wrapper mat-white-bg p-0" fxLayout="column">
+      <mat-tab-group [selectedIndex]="selectedTab" (selectedTabChange)="setSelectedTab($event)">
+        <mat-tab label="Mitra">
+          <app-pay-later-panel-mitra-edit *ngIf="selectedTab === 0"></app-pay-later-panel-mitra-edit>
+        </mat-tab>
+        <mat-tab label="SRC">
+          <app-pay-later-panel-src-edit *ngIf="selectedTab === 1"></app-pay-later-panel-src-edit>
+        </mat-tab>
+      </mat-tab-group>
+    </div>
+  </div>
+</div>
