--- a/src/app/pages/pay-later/pay-later-deactivate/history/pay-later-deactivate-history.component.html
+++ b/src/app/pages/pay-later/pay-later-deactivate/history/pay-later-deactivate-history.component.html
@@ -16,7 +16,7 @@
 
     <ngx-datatable-column name="Nama Mitra" prop="name">
       <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-        <span class="row-name" (click)="directEdit(row)">{{row.name}}</span>
+        {{row.name}}
       </ng-template>
     </ngx-datatable-column>
 
@@ -37,6 +37,25 @@
 
     <ngx-datatable-column name="Area" prop="area">
       <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.area}}
+      </ng-template>
+    </ngx-datatable-column>
+    <ngx-datatable-column name="Pengajuan Deaktivasi" prop="status">
+      <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.status}}
+      </ng-template>
+    </ngx-datatable-column>
+    <ngx-datatable-column name="Approved/Declined" prop="approved">
+      <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.approved}}
+      </ng-template>
+    </ngx-datatable-column>
+
+    <ngx-datatable-column name="Tanggal Pengajuan" prop="created_at">
+      <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+        {{row.created_at | date: 'dd/MM/yyyy HH:mm'}}
+      </ng-template>
+    </ngx-datatable-column>
+
+    <ngx-datatable-column name="Reason" prop="reason">
+      <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.reason}}
       </ng-template>
     </ngx-datatable-column>
   </ngx-datatable>
