--- a/src/app/pages/content-management/help/index/help-index.component.html
+++ b/src/app/pages/content-management/help/index/help-index.component.html
@@ -1,7 +1,8 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
   <page-content-header [contentTitle]="'Bantuan'">
-    <button style="width: 150px" [routerLink]="['/content-management','help', 'create']" mat-raised-button type="button">
+    <button style="width: 150px" [routerLink]="['/content-management','help', 'create']" mat-raised-button
+      type="button">
       <mat-icon>add</mat-icon> BUAT BARU
     </button>
   </page-content-header>
@@ -20,46 +21,94 @@
       </div>
       <div fxLayout="row" fxLayoutAlign="space-between start" class="pl-20 pr-20 pl-8 pb-20 bb-separator">
         <div class="filter-user-group p-12">
-          <mat-select placeholder="Semua Grup Pengguna" (selectionChange)="selectedItemFilter($event)" >
+          <mat-select placeholder="Semua Grup Pengguna" (selectionChange)="selectedItemFilter($event)">
             <mat-option [value]="" selected>Semua Grup Pengguna</mat-option>
             <mat-option *ngFor="let item of userGroup" [value]="item.value">{{item.name}}</mat-option>
           </mat-select>
         </div>
       </div>
-      <ngx-datatable class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [columnMode]="'force'"
-        [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true" [reorderable]="reorderable"
-        [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true"
-        (page)="setPage($event)" (sort)="onSort($event)" (select)="onSelect($event)" [offset]="offsetPagination">
+      <mat-tab-group [selectedIndex]="selectedTab" (selectedTabChange)="onChangeTab($event)">
+        
+        <!-- TAB VIDEO -->
+        <mat-tab label="Video">
 
-        <ngx-datatable-column [width]="200" name="Judul Topik" prop="title">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <span class="row-name" (click)="directEdit(row, 'preview')">{{row.title}}</span>
-          </ng-template>
-        </ngx-datatable-column>
-        <ngx-datatable-column [width]="200" name="Grup Pengguna" prop="user"></ngx-datatable-column>
-        <!-- <ngx-datatable-column name="Halaman Tujuan" prop="slug"></ngx-datatable-column> -->
+          <ngx-datatable class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [columnMode]="'force'"
+            [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true" [reorderable]="reorderable"
+            [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true"
+            (page)="setPage($event)" (sort)="onSort($event)" (select)="onSelect($event)" [offset]="offsetPagination">
 
-        <ngx-datatable-column [width]="100" name="Likes" prop="likes_count"></ngx-datatable-column>
-        <ngx-datatable-column [width]="100" name="Dislikes" prop="unlikes_count"></ngx-datatable-column>
-        <ngx-datatable-column [width]="100" name="Perubahan Terakhir" prop="updated_at">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            <span class="row-name" >{{row.updated_at | date:'dd MMM yyyy'}}</span>
-          </ng-template>
-        </ngx-datatable-column>
+            <ngx-datatable-column [width]="200" name="Judul Topik" prop="title">
+              <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+                <span class="row-name" (click)="directEdit(row, 'preview')">{{row.title}}</span>
+              </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column [width]="200" name="Grup Pengguna" prop="user"></ngx-datatable-column>
+            <!-- <ngx-datatable-column name="Halaman Tujuan" prop="slug"></ngx-datatable-column> -->
 
-        <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value" style="justify-content: center !important">
-            <div class="button-row" style="margin-left: -10px">
-              <button mat-icon-button color="" matTooltip="Ubah" (click)="directEdit(row, 'edit')">
-                <mat-icon class="secondary-text">edit</mat-icon>
-              </button>
-              <button mat-icon-button color="primary" (click)="deletePage(row.id)">
-                <mat-icon>delete</mat-icon>
-              </button>
-            </div>
-          </ng-template>
-        </ngx-datatable-column>
-      </ngx-datatable>
+            <ngx-datatable-column [width]="100" name="Likes" prop="likes_count"></ngx-datatable-column>
+            <ngx-datatable-column [width]="100" name="Dislikes" prop="unlikes_count"></ngx-datatable-column>
+            <ngx-datatable-column [width]="100" name="Perubahan Terakhir" prop="updated_at">
+              <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+                <span class="row-name">{{row.updated_at | date:'dd MMM yyyy'}}</span>
+              </ng-template>
+            </ngx-datatable-column>
+
+            <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
+              <ng-template ngx-datatable-cell-template let-row="row" let-value="value"
+                style="justify-content: center !important">
+                <div class="button-row" style="margin-left: -10px">
+                  <button mat-icon-button color="" matTooltip="Ubah" (click)="directEdit(row, 'edit')">
+                    <mat-icon class="secondary-text">edit</mat-icon>
+                  </button>
+                  <button mat-icon-button color="primary" (click)="deletePage(row.id)">
+                    <mat-icon>delete</mat-icon>
+                  </button>
+                </div>
+              </ng-template>
+            </ngx-datatable-column>
+          </ngx-datatable>
+        </mat-tab>
+
+        <!-- TAB INFO -->
+        <mat-tab label="Info">
+          <ngx-datatable class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [columnMode]="'force'"
+            [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true" [reorderable]="reorderable"
+            [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true"
+            (page)="setPage($event)" (sort)="onSort($event)" (select)="onSelect($event)" [offset]="offsetPagination">
+
+            <ngx-datatable-column [width]="200" name="Judul Topik" prop="title">
+              <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+                <span class="row-name" (click)="directEdit(row, 'preview')">{{row.title}}</span>
+              </ng-template>
+            </ngx-datatable-column>
+            <ngx-datatable-column [width]="200" name="Grup Pengguna" prop="user"></ngx-datatable-column>
+            <!-- <ngx-datatable-column name="Halaman Tujuan" prop="slug"></ngx-datatable-column> -->
+
+            <ngx-datatable-column [width]="100" name="Likes" prop="likes_count"></ngx-datatable-column>
+            <ngx-datatable-column [width]="100" name="Dislikes" prop="unlikes_count"></ngx-datatable-column>
+            <ngx-datatable-column [width]="100" name="Perubahan Terakhir" prop="updated_at">
+              <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+                <span class="row-name">{{row.updated_at | date:'dd MMM yyyy'}}</span>
+              </ng-template>
+            </ngx-datatable-column>
+
+            <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
+              <ng-template ngx-datatable-cell-template let-row="row" let-value="value"
+                style="justify-content: center !important">
+                <div class="button-row" style="margin-left: -10px">
+                  <button mat-icon-button color="" matTooltip="Ubah" (click)="directEdit(row, 'edit')">
+                    <mat-icon class="secondary-text">edit</mat-icon>
+                  </button>
+                  <button mat-icon-button color="primary" (click)="deletePage(row.id)">
+                    <mat-icon>delete</mat-icon>
+                  </button>
+                </div>
+              </ng-template>
+            </ngx-datatable-column>
+          </ngx-datatable>
+        </mat-tab>
+      </mat-tab-group>
+
     </div>
   </div>
 </div>
