--- a/src/app/pages/notification/create/notification-create.component.html
+++ b/src/app/pages/notification/create/notification-create.component.html
@@ -107,7 +107,7 @@
           </div>
 
           <!-- image -->
-          <div class="pb-16" *ngIf="formNotification.get('content_type').value === 'image'" fxLayout="row"
+          <div class="pb-16" *ngIf="formNotification.get('content_type').value === 'image' && formNotification.get('user_group').value !== 'wholesaler'" fxLayout="row"
             fxLayoutAlign="start center">
             <div fxFlex="30" class="inline-block">
               <div ngfDrop selectable="1" [(validDrag)]="validComboDrag" [(file)]="imageContentType" accept="image/*"
@@ -117,14 +117,63 @@
               </div>
             </div>
             <div *ngIf="imageContentType">
-              <div class="mat-chip mat-primary mat-standard-chip mat-chip-with-trailing-icon ng-star-inserted"
-                role="option" tabindex="-1" aria-disabled="false" aria-selected="false"><span
-                  class="preview-image-content" (click)="previewImage()">Lihat gambar</span>
-                <mat-icon matTooltip="Hapus gambar"
+              <div class="multiple-img-chip mat-chip mat-primary mat-standard-chip mat-chip-with-trailing-icon ng-star-inserted p-12"
+                role="option" tabindex="-1" aria-disabled="false" aria-selected="false">
+                <img [src]="imageContentTypeBase64" class="multiple-img" (click)="previewImage()"/> 
+                <span class="preview-image-content" (click)="previewImage()">Lihat gambar</span>
+                <!-- <mat-icon matTooltip="Hapus gambar" (click)="removeImageVideo()"
                   class="mat-chip-remove mat-chip-trailing-icon mat-icon material-icons mat-icon-no-color ng-star-inserted"
-                  matchipremove="" role="img" aria-hidden="true">cancel</mat-icon>
+                  matchipremove="" role="img" aria-hidden="true">cancel</mat-icon> -->
               </div>
             </div>
+          </div>
+
+
+          <!-- multiple image for wholesaler-->
+          <div class="pb-16" *ngIf="formNotification.get('content_type').value === 'image' && formNotification.get('user_group').value === 'wholesaler'" fxLayout="row"
+            fxLayoutAlign="start center">
+            <div fxFlex="30" class="inline-block">
+              <div ngfDrop [(validDrag)]="validComboDrag" [(files)]="imageContentType" accept="image/*"
+                class="well my-drop-zone" [class.invalid-drag]="validComboDrag===false"
+                [class.valid-drag]="validComboDrag" (fileChange)="imagesContentType($event)" selectable="1" multiple="1"> 
+                
+                Tarik gambar kesini atau <strong>pilih file</strong>
+              </div>
+            </div>
+            <div *ngIf="multipleImageContentType.length > 0" fxLayout="row wrap">
+              <div *ngFor="let img of multipleImageContentType; let i = index;">
+                <div class="multiple-img-chip mat-chip mat-primary mat-standard-chip mat-chip-with-trailing-icon ng-star-inserted"
+                  role="option" tabindex="-1" aria-disabled="false" aria-selected="false" style="height: 60px;">
+                  <img [src]="img" class="multiple-img" (click)="previewImage(i)"/> 
+                  <span class="preview-image-content" (click)="previewImage(i)">Lihat gambar</span>
+                  <mat-icon matTooltip="Hapus gambar" (click)="removeImageMultiple(i)"
+                    class="mat-chip-remove mat-chip-trailing-icon mat-icon material-icons mat-icon-no-color ng-star-inserted"
+                    matchipremove="" role="img" aria-hidden="true">cancel</mat-icon>
+                </div>
+              </div>
+            </div>
+          </div>
+
+           <!-- video -->
+          <div class="pb-16" *ngIf="formNotification.get('content_type').value === 'video' && formNotification.get('user_group').value === 'wholesaler'" fxLayout="row"
+           fxLayoutAlign="start center">
+           <div fxFlex="30" class="inline-block">
+             <div ngfDrop selectable="1" [(validDrag)]="validComboDrag" [(file)]="videoContentType" accept="video/mp4"
+               class="well my-drop-zone" [class.invalid-drag]="validComboDrag===false"
+               [class.valid-drag]="validComboDrag" (fileChange)="onVideoContentTypeSelect($event)">
+               Tarik Video kesini atau <strong>pilih file</strong>
+             </div>
+           </div>
+           <div *ngIf="videoContentTypeURL">
+             <div class="video-content-chip mat-chip mat-primary mat-standard-chip mat-chip-with-trailing-icon ng-star-inserted"
+               role="option" tabindex="-1" aria-disabled="false" aria-selected="false">
+               <!-- <span class="preview-image-content" (click)="previewVideo()">Lihat Video</span> -->
+              <video class="video-content" [src]="videoContentTypeURL" controls> </video>
+              <!-- <mat-icon matTooltip="Hapus video" (click)="removeImageVideo()"
+                 class="mat-chip-remove mat-chip-trailing-icon mat-icon material-icons mat-icon-no-color ng-star-inserted"
+                 matchipremove="" role="img" aria-hidden="true">cancel</mat-icon> -->
+             </div>
+           </div>
           </div>
 
           <!-- Consumer -->
